--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Sequelize DB for bands to organize their songs and musicians",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --watchAll",
     "seed": "node seed.js",
     "start": "node server.js",
     "start-dev": "nodemon server.js"
@@ -27,6 +27,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   }
 }
